Fix HTML structure and update image ID

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         Para que todos possam aproveitar de forma leve e harmoniosa, <br><br><strong> Pedimos apenas que não sejam levadas nem 
         consumidas bebidas alcoólicas no ambiente.</strong></P><br>
 
-        <div><img id="date" src="pngtree-calendar-icon-logo-2023-date-time-png-image_6310337.png"> <p id="date">25 de dezembro de 2025</p></div>
+        <div><img id="icon" src="pngtree-calendar-icon-logo-2023-date-time-png-image_6310337.png"> <p id="date">25 de dezembro de 2025</p> </div>
         ><br>
 
         <br><h2>LOCAL</h2><br>
