--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
     <!-- Texto principal -->
     <p id="text">
-        <strong>Sua presença é essencial</strong> para tornar este momento ainda mais especial. <br>
-        Venha compartilhar conosco essa conquista, trazendo sua família para celebrar junto e viver a alegria deste dia. <br>
-        Para que todos possam aproveitar de forma leve e harmoniosa, <br><br>
-        <strong>Pedimos apenas que não sejam levadas nem consumidas bebidas alcoólicas no ambiente.</strong>
+        Prepare-se para um dia de piscina, churrasco e muita diversão!
+Vamos celebrar juntos e fechar o ano com boas risadas e ótimos momentos. <br><br>
+        <strong>NÃO É PERMITIDO CONSUMIR BEBIDAS ALCOÓLICAS.<br>
+Vem curtir com a gente!</strong>
     </p>
 
     <!-- Data com ícone -->
@@ -63,3 +63,4 @@
 
 </body>
 </html>
+
